Corrections to align.

--- a/assets/stylesheets/discordinfo-layout.scss
+++ b/assets/stylesheets/discordinfo-layout.scss
@@ -63,7 +63,7 @@ noBorder{
 
     #_show_discordPrimaryStyle{
       /*background: $secondary;*/
-      padding: 7px 7px 0px 0px;
+      padding: 2px 7px 0px 0px;
       position:absolute;    
       top:0;  
       width: calc( 50% - 20px);
@@ -79,7 +79,6 @@ noBorder{
         
         span{
           font-size:1.6em;
-          vertical-align: top;
         }
 
         i{
